--- a/form.html
+++ b/form.html
@@ -109,8 +109,8 @@ img {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/">Travel Log</a></li>
-        <li><a href="/mobile.html">Mobile</a></li>
+        <li><a href="travelLog/index.html">Travel Log</a></li>
+        <li><a href="travelLog/mobile.html">Mobile</a></li>
         <!-- <li class="dropdown"> -->
           <!-- <a href="developer" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Verbs<span class="caret"></span></a> -->
           <!-- <ul class="dropdown-menu" role="menu"> -->
@@ -126,7 +126,7 @@ img {
 <div id="header">
 <h1 class="title">Travel Log</h1>
 <h4 class="author"><em>Joseph V. Casillas</em></h4>
-<h4 class="date"><em>Updated: 2015-06-17 14:57:37</em></h4>
+<h4 class="date"><em>Updated: 2015-06-17 15:07:45</em></h4>
 </div>
 
 
