--- a/mobile.html
+++ b/mobile.html
@@ -131,7 +131,7 @@ img {
 <div id="header">
 <h1 class="title">Travel Log</h1>
 <h4 class="author"><em>Joseph V. Casillas</em></h4>
-<h4 class="date"><em>Updated: 2015-06-17 15:19:10</em></h4>
+<h4 class="date"><em>Updated: 2015-06-17 15:20:27</em></h4>
 </div>
 
 
@@ -151,15 +151,17 @@ tLog &lt;- read.csv(textConnection(f))</code></pre>
 <p></br></p>
 <pre class="r"><code># check data frame
 glimpse(tLog)</code></pre>
-<pre><code>## Observations: 1
+<pre><code>## Observations: 3
 ## Variables:
-## $ Timestamp (fctr) 6/17/2015 14:16:34
-## $ Location  (fctr) Madrid, Spain
-## $ Lat       (dbl) 40.41678
-## $ Lon       (dbl) -3.70379</code></pre>
+## $ Timestamp (fctr) 6/17/2015 14:16:34, 6/17/2015 15:17:40, 6/17/2015 1...
+## $ Location  (fctr) Madrid, Spain, San Fernando, Spain, cadiz, spain
+## $ Lat       (dbl) 40.41678, 36.47186, 36.52706
+## $ Lon       (dbl) -3.703790, -6.196595, -6.288596</code></pre>
 <pre class="r"><code>head(tLog)</code></pre>
-<pre><code>##            Timestamp      Location      Lat      Lon
-## 1 6/17/2015 14:16:34 Madrid, Spain 40.41678 -3.70379</code></pre>
+<pre><code>##            Timestamp            Location      Lat       Lon
+## 1 6/17/2015 14:16:34       Madrid, Spain 40.41678 -3.703790
+## 2 6/17/2015 15:17:40 San Fernando, Spain 36.47186 -6.196595
+## 3 6/17/2015 15:18:22        cadiz, spain 36.52706 -6.288596</code></pre>
 <p></br></p>
 <pre class="r"><code># plot it
 leaflet(data = tLog, width = 350, height = 450) %&gt;% 
@@ -167,7 +169,7 @@ leaflet(data = tLog, width = 350, height = 450) %&gt;%
   addTiles() %&gt;%
   addMarkers(~Lon, ~Lat, popup = ~as.character(Location))</code></pre>
 <p><div id="htmlwidget-2577" style="width:350px;height:450px;" class="leaflet"></div>
-<script type="application/json" data-for="htmlwidget-2577">{"x":{"setView":[[25,-38],2,[]],"calls":[{"method":"tileLayer","args":["http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{"minZoom":0,"maxZoom":18,"maxNativeZoom":null,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"continuousWorld":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":null,"unloadInvisibleTiles":null,"updateWhenIdle":null,"detectRetina":false,"reuseTiles":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA</a>"}]},{"method":"marker","args":[40.4167754,-3.7037902,null,{"clickable":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"Madrid, Spain"]}],"limits":{"lat":[40.4167754,40.4167754],"lng":[-3.7037902,-3.7037902]}},"evals":[]}</script></p>
+<script type="application/json" data-for="htmlwidget-2577">{"x":{"setView":[[25,-38],2,[]],"calls":[{"method":"tileLayer","args":["http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{"minZoom":0,"maxZoom":18,"maxNativeZoom":null,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"continuousWorld":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":null,"unloadInvisibleTiles":null,"updateWhenIdle":null,"detectRetina":false,"reuseTiles":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA</a>"}]},{"method":"marker","args":[[40.4167754,36.4718646,36.5270612],[-3.7037902,-6.1965948,-6.2885962],null,{"clickable":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},["Madrid, Spain","San Fernando, Spain","cadiz, spain"]]}],"limits":{"lat":[36.4718646,40.4167754],"lng":[-6.2885962,-3.7037902]}},"evals":[]}</script></p>
 <p>This map was created using the <a href="http://rstudio.github.io/leaflet/">leaflet</a> package.</p>
 
 
