--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ img {
 <div id="header">
 <h1 class="title">Travel Log</h1>
 <h4 class="author"><em>Joseph V. Casillas</em></h4>
-<h4 class="date"><em>Updated: 2015-06-17 15:20:25</em></h4>
+<h4 class="date"><em>Updated: 2015-06-17 15:32:27</em></h4>
 </div>
 
 
@@ -151,17 +151,20 @@ tLog &lt;- read.csv(textConnection(f))</code></pre>
 <p></br></p>
 <pre class="r"><code># check data frame
 glimpse(tLog)</code></pre>
-<pre><code>## Observations: 3
+<pre><code>## Observations: 22
 ## Variables:
 ## $ Timestamp (fctr) 6/17/2015 14:16:34, 6/17/2015 15:17:40, 6/17/2015 1...
-## $ Location  (fctr) Madrid, Spain, San Fernando, Spain, cadiz, spain
-## $ Lat       (dbl) 40.41678, 36.47186, 36.52706
-## $ Lon       (dbl) -3.703790, -6.196595, -6.288596</code></pre>
+## $ Location  (fctr) Madrid, Spain, San Fernando, Spain, Cadiz, Spain, S...
+## $ Lat       (dbl) 40.41678, 36.47186, 36.52706, 37.38909, 41.29745, 48...
+## $ Lon       (dbl) -3.7037902, -6.1965948, -6.2885962, -5.9844589, 2.08...</code></pre>
 <pre class="r"><code>head(tLog)</code></pre>
 <pre><code>##            Timestamp            Location      Lat       Lon
 ## 1 6/17/2015 14:16:34       Madrid, Spain 40.41678 -3.703790
 ## 2 6/17/2015 15:17:40 San Fernando, Spain 36.47186 -6.196595
-## 3 6/17/2015 15:18:22        cadiz, spain 36.52706 -6.288596</code></pre>
+## 3 6/17/2015 15:18:22        Cadiz, Spain 36.52706 -6.288596
+## 4 6/17/2015 15:24:21      Seville, Spain 37.38909 -5.984459
+## 5 6/17/2015 15:24:37    Barcelona, Spain 41.29745  2.083294
+## 6 6/17/2015 15:24:47       Paris, France 48.85661  2.352222</code></pre>
 <p></br></p>
 <pre class="r"><code># plot it
 leaflet(data = tLog, width = 910, height = 500) %&gt;% 
@@ -169,7 +172,7 @@ leaflet(data = tLog, width = 910, height = 500) %&gt;%
   addTiles() %&gt;%
   addMarkers(~Lon, ~Lat, popup = ~as.character(Location))</code></pre>
 <p><div id="htmlwidget-2577" style="width:910px;height:500px;" class="leaflet"></div>
-<script type="application/json" data-for="htmlwidget-2577">{"x":{"setView":[[25,-38],2,[]],"calls":[{"method":"tileLayer","args":["http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{"minZoom":0,"maxZoom":18,"maxNativeZoom":null,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"continuousWorld":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":null,"unloadInvisibleTiles":null,"updateWhenIdle":null,"detectRetina":false,"reuseTiles":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA</a>"}]},{"method":"marker","args":[[40.4167754,36.4718646,36.5270612],[-3.7037902,-6.1965948,-6.2885962],null,{"clickable":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},["Madrid, Spain","San Fernando, Spain","cadiz, spain"]]}],"limits":{"lat":[36.4718646,40.4167754],"lng":[-6.2885962,-3.7037902]}},"evals":[]}</script></p>
+<script type="application/json" data-for="htmlwidget-2577">{"x":{"setView":[[25,-38],2,[]],"calls":[{"method":"tileLayer","args":["http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{"minZoom":0,"maxZoom":18,"maxNativeZoom":null,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"continuousWorld":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":null,"unloadInvisibleTiles":null,"updateWhenIdle":null,"detectRetina":false,"reuseTiles":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA</a>"}]},{"method":"marker","args":[[40.4167754,36.4718646,36.5270612,37.3890924,41.297445,48.856614,32.2217429,33.4483771,47.6062095,48.74908,49.2827291,47.2528768,47.0378741,32.715738,40.7127837,44.0153371,41.9027835,51.5073509,38.7222524,35.7594651,35.466667,36.1407734],[-3.7037902,-6.1965948,-6.2885962,-5.9844589,2.0832941,2.3522219,-110.926479,-112.0740373,-122.3320708,-122.4781473,-123.1207375,-122.4442906,-122.9006951,-117.1610838,-74.0059413,-73.16734,12.4963655,-0.1277583,-9.1393366,-5.8339543,-6.033333,-5.3535994],null,{"clickable":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},["Madrid, Spain","San Fernando, Spain","Cadiz, Spain","Seville, Spain","Barcelona, Spain","Paris, France","Tucson, Arizona","Phoenix, Arizona","Seattle, Washington","Bellingham, Washington","Vancouver, Canada","Tacoma, Washington","Olympia, Washington","San Diego, California","New York City, New York","Middlebury, Vermont","Rome, Italy","London, England","Lisbon, Portugal","Tangier, Morocco","Asilah, Morocco","Gibraltar, Spain"]]}],"limits":{"lat":[32.2217429,51.5073509],"lng":[-123.1207375,12.4963655]}},"evals":[]}</script></p>
 <p>This map was created using the <a href="http://rstudio.github.io/leaflet/">leaflet</a> package.</p>
 
 
